--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "next-perf",
+  "name": "next-state-perf",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3010",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^11.0.1",
     "next": "11.0.1",
+    "next-compose-plugins": "^2.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.17.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "7.29.0",
